# bowling-kata-c

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt  example_app.c
include/example/: bowling_game.h
src/: CMakeLists.txt  bowling_game.c
test/: CMakeLists.txt  bowling_game_test.c
